--- a/PSO_02/2020-02-01 PSO 02.md
+++ b/PSO_02/2020-02-01 PSO 02.md
@@ -1,8 +1,8 @@
 # PSO 02
 
-### Instructor: Giselle Zeno
+### Instructor: Huangyi Ge
 
-- PSO OL2/OL3 materials: [github](https://github.com/zeno129/PSO-CS448-S2021)
+- PSO 01/05 materials: [github](https://github.com/gehuangyi20/cs448)
 
 ### Setup
 
