--- a/PSO_02/2020-02-01 PSO 02.ipynb
+++ b/PSO_02/2020-02-01 PSO 02.ipynb
@@ -11,9 +11,9 @@
    "source": [
     "# PSO 02\n",
     "\n",
-    "### Instructor: Giselle Zeno\n",
+    "### Instructor: Huangyi Ge\n",
     "\n",
-    "- PSO OL2/OL3 materials: [github](https://github.com/zeno129/PSO-CS448-S2021)"
+    "- PSO 01/05 materials: [github](https://github.com/gehuangyi20/cs448)"
    ]
   },
   {
